07-advanced-operations-lab/lab/assets/resources/old/nginx-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-default
  labels:
    app.kubernetes.io/name: nginx-default
    app.kubernetes.io/part-of: nginx-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-default
      app.kubernetes.io/part-of: nginx-default
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-default
        app.kubernetes.io/part-of: nginx-default
    spec:
      containers:
      - name: nginx-default
        image: nginxdemos/hello:0.2
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-default
  labels:
    app.kubernetes.io/name: nginx-default
    app.kubernetes.io/part-of: nginx-default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginx-default
    app.kubernetes.io/part-of: nginx-default
