07-advanced-operations-lab/lab/assets/resources/old/nginx-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  labels:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/part-of: nginx-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-green
      app.kubernetes.io/part-of: nginx-green
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-green
        app.kubernetes.io/part-of: nginx-green
    spec:
      containers:
      - name: nginx-green
        image: nginxdemos/hello:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-green
  labels:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/part-of: nginx-green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/part-of: nginx-green
