07-advanced-operations-lab/lab/assets/resources/old/host-routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-routing
spec:
  backend:
    serviceName: nginx-default
    servicePort: 80
  rules:
  - host: blue.algo
    http:
      paths:
      - backend:
          serviceName: nginx-blue
          servicePort: 80
  - host: green.algo
    http:
      paths:
      - backend:
          serviceName: nginx-green
          servicePort: 80
