07-advanced-operations-lab/lab/assets/resources/old/path-routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-routing
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  backend:
    serviceName: nginx-default
    servicePort: 80
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-blue
          servicePort: 80
        path: /blue
  - http:
      paths:
      - backend:
          serviceName: nginx-green
          servicePort: 80
        path: /green
