07-advanced-operations-lab/lab/assets/resources/old/weighted-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weighted-ingress
  annotations:
      traefik.ingress.kubernetes.io/service-weights: |
          nginx-green: 70%
          nginx-blue: 30%
spec:
  rules:
  - host: weighted.algo
    http:
      paths:
      - backend:
          serviceName: nginx-green
          servicePort: 80
      - backend:
          serviceName: nginx-blue
          servicePort: 80
